--- a/jazzCatsApp/Info.plist
+++ b/jazzCatsApp/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ShadowsIntoLight-Regular.ttf</string>
+		<string>JazzText_Regular.ttf</string>
+		<string>Gaegu-Regular.ttf</string>
+	</array>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Record your sample</string>
 	<key>CFBundleDevelopmentRegion</key>
