--- a/jazzCatsApp/Info.plist
+++ b/jazzCatsApp/Info.plist
@@ -2,15 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>ShadowsIntoLight-Regular.ttf</string>
-		<string>JazzText_Regular.ttf</string>
-		<string>Gaegu-Regular.ttf</string>
-		<string>Gaegu-Bold.ttf</string>
-	</array>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Record your sample</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -29,6 +20,19 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Record your sample</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ShadowsIntoLight-Regular.ttf</string>
+		<string>JazzText_Regular.ttf</string>
+		<string>Gaegu-Regular.ttf</string>
+		<string>Gaegu-Bold.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
