--- a/jazzCatsApp/Info.plist
+++ b/jazzCatsApp/Info.plist
@@ -41,9 +41,7 @@
 		<string>Gaegu-Bold.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
